--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   image_cropper: ^3.0.2
   image_picker: ^0.8.7+3
+  universal_io: ^2.2.0
 
 dev_dependencies:
   flutter_test:
