--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,22 @@ version: 0.0.1
 #homepage:
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=2.19.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  image_cropper: ^3.0.2
-  image_picker: ^0.8.7+3
+  image_cropper: ^4.0.1
+  image_picker: ^0.8.7+5
   universal_io: ^2.2.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  
+  very_good_analysis: ^5.0.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
